--- a/Sources/Application/packages.config
+++ b/Sources/Application/packages.config
@@ -1,9 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
+
 <packages>
   <package id="AutoMapper" version="8.0.0" targetFramework="net472" />
   <package id="MaterialDesignColors" version="1.1.3" targetFramework="net472" />
   <package id="MaterialDesignThemes" version="2.4.0.1044" targetFramework="net472" />
-  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.2" targetFramework="net472" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.2" targetFramework="net472"
+           developmentDependency="true" />
   <package id="Microsoft.CodeQuality.Analyzers" version="2.6.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.NetCore.Analyzers" version="2.6.2" targetFramework="net472" developmentDependency="true" />
   <package id="Microsoft.NetFramework.Analyzers" version="2.6.2" targetFramework="net472" developmentDependency="true" />
