--- a/Sources/Application/Mmu.LolTimer.csproj
+++ b/Sources/Application/Mmu.LolTimer.csproj
@@ -113,46 +113,46 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Compile Include="Areas\Application\Common\Factories\IInputFactory.cs" />
-    <Compile Include="Areas\Application\Common\Models\Configurations\IEventConfiguration.cs" />
-    <Compile Include="Areas\Application\Common\Models\Inputs\IInput.cs" />
-    <Compile Include="Areas\Application\Common\Models\Inputs\INativeInput.cs" />
-    <Compile Include="Areas\Application\Common\Services\IInputReceivre.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\IKeyboardInputFactory.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Implementation\KeyboardInputFactory.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Servants\IKeyboardInputKeyMappingServant.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Servants\IKeyboardInputLocksFactory.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Servants\IKeyboardInputModifiersFactory.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Servants\Implementation\KeyboardInputKeyMappingServant.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Servants\Implementation\KeyboardInputLocksFactory.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Factories\Servants\Implementation\KeyboardInputModifiersFactory.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Configurations\KeyboardEventConfiguration.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Configurations\KeyboardInputKeyConfiguration.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Configurations\KeyboardInputMap.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Configurations\LockConfiguration.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Configurations\ModifierConfiguration.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Inputs\KeyboardInput.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Inputs\KeyboardInputDirection.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Inputs\KeyboardInputKey.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Inputs\KeyboardInputLocks.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Models\Inputs\KeyboardInputModifiers.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Services\IKeyboardHookService.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Services\IKeyboardInputReceiver.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\Domain\Services\Implementation\KeyboardHookService.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\WindowsNative\Models\NativeKeyboardInput.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\WindowsNative\Models\NativeKeyboardInputDirection.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\WindowsNative\Services\Implementation\NativeKeyboardHookService.cs" />
-    <Compile Include="Areas\Application\KeyboardHooking\WindowsNative\Services\INativeKeyboardHookService.cs" />
-    <Compile Include="Areas\Application\Services\Implementation\TimeableElementConfigurator.cs" />
-    <Compile Include="Areas\Application\Services\ITimeableElementConfigurator.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Delegates\HookProc.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Delegates\HookReceived.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Enums\HookType.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Imports\NativeMethods.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Services\IHookService.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Services\Implementation\HookService.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Services\Servants\Implementation\InvokeActionServant.cs" />
-    <Compile Include="Areas\Application\WindowsNative\Services\Servants\Implementation\MySafeHandle.cs" />
+    <Compile Include="Areas\Application\Hooking\Common\Factories\IInputFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\Common\Models\Configurations\IEventConfiguration.cs" />
+    <Compile Include="Areas\Application\Hooking\Common\Models\Inputs\IInput.cs" />
+    <Compile Include="Areas\Application\Hooking\Common\Models\Inputs\INativeInput.cs" />
+    <Compile Include="Areas\Application\Hooking\Common\Services\IInputReceiver.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\IKeyboardInputFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Implementation\KeyboardInputFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Servants\IKeyboardInputKeyMappingServant.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Servants\IKeyboardInputLocksFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Servants\IKeyboardInputModifiersFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Servants\Implementation\KeyboardInputKeyMappingServant.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Servants\Implementation\KeyboardInputLocksFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Factories\Servants\Implementation\KeyboardInputModifiersFactory.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Configurations\KeyboardEventConfiguration.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Configurations\KeyboardInputKeyConfiguration.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Configurations\KeyboardInputMap.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Configurations\LockConfiguration.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Configurations\ModifierConfiguration.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Inputs\KeyboardInput.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Inputs\KeyboardInputDirection.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Inputs\KeyboardInputKey.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Inputs\KeyboardInputLocks.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Models\Inputs\KeyboardInputModifiers.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Services\IKeyboardHookService.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Services\IKeyboardInputReceiver.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\Domain\Services\Implementation\KeyboardHookService.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\WindowsNative\Models\NativeKeyboardInput.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\WindowsNative\Models\NativeKeyboardInputDirection.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\WindowsNative\Services\Implementation\NativeKeyboardHookService.cs" />
+    <Compile Include="Areas\Application\Hooking\KeyboardHooking\WindowsNative\Services\INativeKeyboardHookService.cs" />
+    <Compile Include="Areas\Application\TimableElements\Services\Implementation\TimeableElementConfigurator.cs" />
+    <Compile Include="Areas\Application\TimableElements\Services\ITimeableElementConfigurator.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Delegates\HookProc.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Delegates\HookReceived.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Enums\HookType.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Imports\NativeMethods.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Services\IHookService.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Services\Implementation\HookService.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Services\Servants\Implementation\InvokeActionServant.cs" />
+    <Compile Include="Areas\Application\Hooking\WindowsNative\Services\Servants\Implementation\MySafeHandle.cs" />
     <Compile Include="Areas\Domain\Common\Models\ITimeableElement.cs" />
     <Compile Include="Areas\Domain\JungleCamps\Models\Buffs\Blue.cs" />
     <Compile Include="Areas\Domain\JungleCamps\Models\Buffs\BuffJungleCamp.cs" />
